# cloudscale_rl2

./: .env.example  Dockerfile  Dockerfile.cloudrun  README.md  __init__.py  client.py  decision.py  firebase.json  inference.py  models.py  openenv.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  JUDGING_CHECKLIST.md  SUBMISSION_GUIDE_GOOGLE_2026.md
openenv_cloudscale_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
prototype/: README.md  app.js  config.js  events.html  events.js  index.html  styles.css
scripts/: deploy_cloud_run.sh  deploy_firebase.sh  preflight_google_submission.sh  run_baseline.py
server/: __init__.py  app.py  cloudscale_rl_environment.py  event_logger.py  gemini_advisor.py  grader.py  requirements.txt
tests/: test_env.py
training/: __init__.py  common.py  inference.py  train_ddqn_per.py  train_ppo_masked.py
